DEV/src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>xsms__Mobile_Numbers_SMS__c</fullName>
        <description>If task is of type SMS , SMS is sent to these mobile numbers.</description>
        <inlineHelpText>If task is of type SMS , SMS is sent to these mobile numbers.</inlineHelpText>
        <label>Mobile Numbers (SMS)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>xsms__SMS_Id__c</fullName>
        <description>xSMS Field: unique Id generated for sent SMS</description>
        <inlineHelpText>xSMS Field: unique Id generated for sent SMS</inlineHelpText>
        <label>SMS Id</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xsms__SMS_Sent_Result__c</fullName>
        <description>contain Id of SMS sent in case of success SMS and in case of any error while sending SMS should contain failure message.</description>
        <inlineHelpText>contain Id of SMS sent in case of success SMS and in case of any error while sending SMS should contain failure message.</inlineHelpText>
        <label>SMS Sent Result</label>
        <type>TextArea</type>
    </fields>
    <listViews>
        <fullName>AllActivities</fullName>
        <filterScope>Team</filterScope>
        <label>All Activities</label>
    </listViews>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>